// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card overview 1 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-16xhrua"
  >
    <img
      class="css-9taffg"
      src="https://picsum.photos/seed/picsum/128/128"
    />
    <span
      class="css-vurnku"
    >
      Johnny Oberbrunner
    </span>
  </div>
</DocumentFragment>
`;

exports[`Card overview 2 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-mo75ut"
  >
    <img
      class="css-9taffg"
      src="https://picsum.photos/seed/picsum/128/128"
    />
    <span
      class="css-vurnku"
    >
      Jolie Beahan Sr.
    </span>
  </div>
</DocumentFragment>
`;

exports[`Card overview 3 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1iyhh25"
  >
    <img
      class="css-9taffg"
      src="https://picsum.photos/seed/picsum/128/128"
    />
    <span
      class="css-vurnku"
    >
      Cleo Lindgren
    </span>
  </div>
</DocumentFragment>
`;

exports[`Card overview 4 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1a58edv"
  >
    <img
      class="css-9taffg"
      src="https://picsum.photos/seed/picsum/128/128"
    />
    <span
      class="css-vurnku"
    >
      Tyler Blanda
    </span>
  </div>
</DocumentFragment>
`;

exports[`Card overview 5 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-kkvepd"
  >
    <img
      class="css-9taffg"
      src="https://picsum.photos/seed/picsum/128/128"
    />
    <span
      class="css-vurnku"
    >
      Krista Zulauf
    </span>
  </div>
</DocumentFragment>
`;
